2009-03-13  Per Bothner  <per@bothner.com>

	* kawa.texi (Implemented SRFIs): Update list.

2009-03-07  Per Bothner  <per@bothner.com>

	* kawa.texi (Keywords): We no longer support :IDENTIFIER syntax
	for keywords in Scheme, only in Common Lisp and ELisp.

2009-02-06  Per Bothner  <per@bothner.com>

	* kawa.texi (Paths): Document URL type and resolve-uri function.
	(Resources): New section for resource-url and module-uri.

2008-11-10  Per Bothner  <per@bothner.com>

	* kawa.texi (Field operations): Remove <angles> around type names
	in define-alias example.

2008-07-17  Per Bothner  <per@bothner.com>

	* kawa.texi (Logical Number Operations): Document all the
	now-implemented R6RS functions.  Move some of the now-redundant
	fuctions to a new subsubsection 'Deprecated Logical Number Operations'.

2008-06-01  Per Bothner  <per@bothner.com>

	* kawa.texi: Some improvements here and there.

	* kawa.texi (Standard Types): The preferred spelling of standard
	types is now without the angle brackets.

2008-04-30  Per Bothner  <per@bothner.com>

	* kawa.texi (Applet compilation): Update scribble example to use
	new syntax etc.

	* kawa.texi (Paths): Fix documentation of path-file.
	Bug reported by Ethan Herdrick <info@reatlas.com>. 

2008-03-20  Per Bothner  <per@bothner.com>

	* kawa.texi (Source distribution): Update from "Java 2" as the
	default to "Java 5".

	* kawa.texi (Source distribution): Note that parallel make doesn't work.

2008-02-15  Per Bothner  <per@bothner.com>

	* Makefile.am: Some fixes in where the html files generated from
	kawa.texi are put. Renamed directory to kawa-html.

	* kawa-tour.texi, kawa-tour.tex: Remove old document.
	This has been replaced by the "internals" manual.
	* Makefile.am: Update accordingly.

2008-01-26  Per Bothner  <per@bothner.com>

	* kawa.texi: Note the binary jar now requires Java 5.

	* kawa.texi (Syntax and conditional compilation): Document somewhat
	define-syntax-case and deprecated define-macro.
